# CARDAL

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
downstream_utils/: sos_sdp_gen.py
include/: cardal.h  sdp_types.h
internal/: batched_cone_ops.h  cli_common.h  distribution_solver.h  distribution_utils.h  generator.h  inner_solvers.cuh  internal_types.h  npz_reader.h  outer_loop.cuh  parser.h  preconditioner.h  rank_lift.h  sdp_op.h  solver.h  solver_core_op.cuh  solver_state.h  utils.h
python/: README.md
python/cardal/: __init__.py  enums.py  model.py  result.py
python/tests/: test_build_problem.py  test_smoke.py
python_bindings/: CMakeLists.txt  _core.cpp
qubo/: qubo.c  qubo.h  qubo_cli.c  qubo_io.c  qubo_io.h  qubo_round.cu  qubo_runner.c
src/: batched_cone_ops.cu  cardal_c_api.c  cli.c  cli_common.c  distribution_solver.cu  distribution_utils.cu  mat_parser.c  maxcut_generator.c  npz_reader.c  parser.c  pdsdp_parser.c  precondition.c  quantum_order_generator.c  rank_lift.cu  sdp_op.cu  sdpa_parser.c  snl_generator.c  solver.cu  solver_state.cu  utils.cu
